# esp-telegram-bot

./: CMakeLists.txt  README.md  telegram.c  telegram_parser.c  telegram_send_photo.c  telegram_send_text.c
include/: telegram.h  telegram_send_photo.h  telegram_send_text.h
parser/: telegram_message.c  telegram_message_document.c  telegram_message_from.c  telegram_result.c
private_include/: telegram_api.h  telegram_parser.h
private_include/parser/: telegram_message.h  telegram_message_document.h  telegram_message_from.h  telegram_result.h
